--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -11,11 +11,11 @@ jobs:
     steps:
     # use the checkout action to checkout from Master
     - uses: actions/checkout@v2
-      # sets up .NET Core SDK 3.1
+      # sets up .NET Core SDK 7.0
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 7.0
+        dotnet-version: '7.x'
       # Publish to release
     - name: Publish .NET Core Project
       run: dotnet publish Drag_Static_Site.csproj -c Release -o release --nologo
