--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -18,7 +18,7 @@ jobs:
         dotnet-version: '7.x'
       # Publish to release
     - name: Publish .NET Core Project
-      run: dotnet publish Drag_Static_Site.csproj -c Release -o release --nologo
+      run: dotnet publish Drag_Static_Site\Drag_Static_Site.csproj -c Release -o release --nologo
     - name: Commit wwwroot to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@3.7.1
       with:
