--- a/Drag_Static_Site/Drag_Static_Site.csproj
+++ b/Drag_Static_Site/Drag_Static_Site.csproj
@@ -7,10 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Remove="wwwroot\Posts\10232023.md" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Blazored.LocalStorage" Version="4.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.12" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.12" PrivateAssets="all" />
@@ -20,14 +16,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\fonts\" />
+    <Folder Include="wwwroot\Posts\" />
   </ItemGroup>
-
-  <ItemGroup>
-    <None Include="wwwroot\Posts\10232023.md" />
-    <None Include="wwwroot\Posts\10212023.md" />
-    <None Include="wwwroot\Posts\10222023.md" />
-  </ItemGroup>
-
-  <ProjectExtensions><VisualStudio><UserProperties wwwroot_4posts_1json__JsonSchema="Post" /></VisualStudio></ProjectExtensions>
 
 </Project>
