--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -18,9 +18,9 @@ jobs:
         dotnet-version: '7.x'
       # Publish to release
     - name: Publish .NET Core Project
-      run: dotnet publish -c Release -o release --nologo
+      run: dotnet publish -c Release -o release --nologo --verbosity n
       # changes the base-tag in index.html from '/' to 'Drag_Static_Site' to match the GitHub Pages repository folder struc
-    - name: Change base-tag in index.html from / to BlazorGitHubPagesDemo
+    - name: Change base-tag in index.html from / to Drag_Static_Site
       run: sed -i 's/<base href="\/" \/>/<base href="\/Drag_Static_Site\/" \/>/g' release/wwwroot/index.html
       # add .nojekyll file since this isn't made with Jekyll. This is needed because Blazor uses files & folders with initial char of _'s 
     - name: Add .nojekyll file
