--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -17,8 +17,8 @@ jobs:
       with:
         dotnet-version: '7.x'
       # Publish to release
-    - name: Publish .NET Core Project
-      run: dotnet publish -c Release -o release --nologo --verbosity n
+    - name: Publish .NET Core Project - Output to Console
+      run: echo "$(dotnet publish -c Release -o release --nologo --verbosity n)"
       # changes the base-tag in index.html from '/' to 'Drag_Static_Site' to match the GitHub Pages repository folder struc
     - name: Change base-tag in index.html from / to Drag_Static_Site
       run: sed -i 's/<base href="\/" \/>/<base href="\/Drag_Static_Site\/" \/>/g' release/wwwroot/index.html
