--- a/Drag_Static_Site/Drag_Static_Site.csproj
+++ b/Drag_Static_Site/Drag_Static_Site.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="PreBuildUtils\" />
     <Folder Include="wwwroot\fonts\" />
     <Folder Include="wwwroot\Posts\" />
   </ItemGroup>
@@ -26,7 +27,7 @@
   </ItemGroup>
 
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
-    <Exec Command="call $(ProjectDir)PostMetaDataGenerator.exe" />
+    <Exec Command="call $(ProjectDir)\PreBuildUtils\PostMetaDataGenerator.exe" />
   </Target>
 
 </Project>
