Use dotnet for prebuild instead of call

--- a/Drag_Static_Site/Drag_Static_Site.csproj
+++ b/Drag_Static_Site/Drag_Static_Site.csproj
@@ -27,7 +27,7 @@
   </ItemGroup>
 
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
-    <Exec Command="call $(ProjectDir)\PreBuildUtils\PostMetaDataGenerator.exe" />
+    <Exec Command="dotnet $(ProjectDir)\PreBuildUtils\PostMetaDataGenerator.dll" />
   </Target>
 
 </Project>
