--- a/PostMetaDataGenerator/PostMetaDataGenerator.csproj
+++ b/PostMetaDataGenerator/PostMetaDataGenerator.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Markdig" Version="0.33.0" />
+    <PackageReference Include="YamlDotNet" Version="13.7.1" />
+  </ItemGroup>
+
 </Project>
