--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -22,6 +22,9 @@ jobs:
       # changes the base-tag in index.html from '/' to 'Drag_Static_Site' to match the GitHub Pages repository folder struc
     - name: Change base-tag in index.html from / to Drag_Static_Site
       run: sed -i 's/<base href="\/" \/>/<base href="\/Drag_Static_Site\/" \/>/g' release/wwwroot/index.html
+      # copy index.html to 404.html to serve the same file when a file is not found
+    - name: copy index.html to 404.html
+      run: cp release/wwwroot/index.html release/wwwroot/404.html
       # add .nojekyll file since this isn't made with Jekyll. This is needed because Blazor uses files & folders with initial char of _'s 
     - name: Add .nojekyll file
       run: touch release/wwwroot/.nojekyll
