--- a/Drag_Static_Site/Drag_Static_Site.csproj
+++ b/Drag_Static_Site/Drag_Static_Site.csproj
@@ -1,26 +1,28 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net7.0</TargetFramework>
+        <Nullable>enable</Nullable>
+        <ImplicitUsings>enable</ImplicitUsings>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Blazored.LocalStorage" Version="4.4.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.12" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.12" PrivateAssets="all" />
-    <PackageReference Include="MudBlazor" Version="6.11.0" />
-    <PackageReference Include="MudBlazor.Markdown" Version="0.1.2" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Blazored.LocalStorage" Version="4.4.0" />
+        <PackageReference Include="CsvHelper" Version="30.0.1" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.12" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.12" PrivateAssets="all" />
+        <PackageReference Include="MudBlazor" Version="6.11.0" />
+        <PackageReference Include="MudBlazor.Markdown" Version="0.1.2" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="PreBuildUtils\" />
-    <Folder Include="wwwroot\fonts\" />
-  </ItemGroup>
+    <ItemGroup>
+        <Folder Include="Components\" />
+        <Folder Include="PreBuildUtils\" />
+        <Folder Include="wwwroot\fonts\" />
+    </ItemGroup>
 
-  <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
-    <Exec Command="dotnet build $(ProjectDir)../PostMetaDataGenerator/PostMetaDataGenerator.csproj -o $(ProjectDir)/PreBuildUtils/&#xA;&#xA;dotnet $(ProjectDir)/PreBuildUtils/PostMetaDataGenerator.dll" />
-  </Target>
+    <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
+        <Exec Command="dotnet build $(ProjectDir)../PostMetaDataGenerator/PostMetaDataGenerator.csproj -o $(ProjectDir)/PreBuildUtils/&#xA;&#xA;dotnet $(ProjectDir)/PreBuildUtils/PostMetaDataGenerator.dll" />
+    </Target>
 
 </Project>
