--- a/Drag_Static_Site/Drag_Static_Site.csproj
+++ b/Drag_Static_Site/Drag_Static_Site.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="Blazored.LocalStorage" Version="4.4.0" />
+        <PackageReference Include="Bogus" Version="34.0.2" />
         <PackageReference Include="CsvHelper" Version="30.0.1" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.12" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.12" PrivateAssets="all" />
@@ -16,7 +17,6 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Folder Include="Components\" />
         <Folder Include="PreBuildUtils\" />
         <Folder Include="wwwroot\fonts\" />
     </ItemGroup>
